--- a/index.html
+++ b/index.html
@@ -12,67 +12,59 @@
 </head>
 <body>
     <header class="topo">
-        <a href="#" class="topo__logo">
-            CoronaTeste
-            <img src="https://img.icons8.com/nolan/64/coronavirus.png" class="topo__logo__img"/>
-        </a>
 
-        <ul class="topo__menu">
-            <li class="topo__menu__item">
-                <a href="#sintomas">Sintomas</a>
-            </li>
-            <li class="topo__menu__item">
-                <a href="#teste">Teste</a>
-            </li>
-            <li class="topo__menu__item">
-                <a href="#servicos">Serviços</a>
-            </li>
-        </ul>
+        <div class="topo__logo">CoronaTeste<img src="https://img.icons8.com/nolan/64/coronavirus.png" class="topo__logo__img"/></div><!--Depois você implementa um "back to the top" com js. Fica bem melhor do que inutilizar o logo deixando ele clicável-->
+
+        <div class="topo__menu"><!--Não vi necessidade para usar a lista, é só mais conteúdo que precisar ser estilizado individualmente-->
+            <a href="#sintomas" class="topo__menu__item">Sintomas</a>
+            <a href="#teste" class="topo__menu__item">Teste</a>
+            <a href="#servicos" class="topo__menu__item">Serviços</a>
+        </div>
+
     </header>
 
-    <section id="sintomas" class="sintomas bloco">
+    <section id="sintomas" class="sintomas"><!--Me livrei da classe="bloco"-->
+
         <h1 class="sintomas__titulo">Sintomas</h1>
-            <div class="sintomas__item--left">
-                <div class="center">
-                    <img src="img/tosse.png" alt="Tosse" class="sintomas__item__img">
-                </div>
+
+        <div class="sintomas__grid"><!--Assim fica mais e deixa o código menos redundante-->
+            <article class="sintomas__grid__sintoma">
+                <img src="img/tosse.png" alt="Tosse" class="sintomas__item__img">
                 <h3 class="sintomas__item__titulo">Tosse</h3>
-            </div>
-            <div class="sintomas__item--right">
-                <div class="center">
-                    <img src="img/febre.png" alt="Febre" class="sintomas__item__img">
-                </div>
-                <h3 class="sintomas__item__titulo">Febre</h3>
-            </div>
-            <div class="sintomas__item--left">
-                <div class="center">
-                    <img src="img/dordegarganta.png" alt="Dor de Garganta" class="sintomas__item__img">
-                </div>
+            </article>
+
+            <article class="sintomas__grid__sintoma">
+                <img src="img/dordegarganta.png" alt="Dor de Garganta" class="sintomas__item__img">
                 <h3 class="sintomas__item__titulo">Dor de Garganta</h3>
-            </div>
-            <div class="sintomas__item--right">
-                <div class="center">
-                    <img src="img/dificuldaderespirar.png" alt="Dor de Garganta" class="sintomas__item__img">
-                </div>
-                <h3 class="sintomas__item__titulo">Dificuldade para respirar</h3>
-            </div>
-            <div class="sintomas__item__outros">
-                <h1 class="sintomas__item__titulo">Outros possíveis sintomas:</h1>
-                <ul>
-                    <li class="sintomas__item__titulo sintomas__item__titulo--justify">> Mal estar geral</li>
-                    <li class="sintomas__item__titulo sintomas__item__titulo--justify">> Congestão nasal</li>
-                    <li class="sintomas__item__titulo sintomas__item__titulo--justify">> Dores no corpo</li>
-                    <li class="sintomas__item__titulo sintomas__item__titulo--justify">> Coriza (corrimento nasal)</li>
-                </ul>
-            </div>
+            </article>
+
+            <article class="sintomas__grid__sintoma">
+                <img src="img/febre.png" alt="Febre" class="sintomas__item__img">
+                <h3 class="sintomas__item__titulo">Febre</h3>
+            </article>
+
+            <article class="sintomas__grid__sintoma">
+                <img src="img/dificuldaderespirar.png" alt="Dificuldades respiratórias" class="sintomas__item__img">
+                <h3 class="sintomas__item__titulo">Dificuldades respiratórias</h3>
+            </article>
+        </div>
+
+        <div class="sintomas__outros">
+            <h1 class="sintomas__outro__titulo">Outros possíveis sintomas:</h1>
+            <ul class="sintomas__outro__lista">
+                <!-- Repetição exacerbada de classe que não faz nada aqui também-->
+                <li class="sintomas__outro__lista-item"> > Mal estar geral</li>
+                <li class="sintomas__outro__lista-item"> > Congestão nasal</li>
+                <li class="sintomas__outro__lista-item"> > Dores no corpo</li>
+                <li class="sintomas__outro__lista-item"> > Coriza (corrimento nasal)</li>
+            </ul>
+        </div>
     </section>
     
-    <section id="teste" class="teste bloco">
+    <section id="teste" class="teste">
     <div class="teste__antes"> <!--Esse menu aparece antes do usuario aceitar fazer o teste-->
-        <div class="center">
-            <img src="img/coronavirus.jpg" alt="Foto do virús" class="teste__antes__img">
-        </div>
-            <h1 class="teste__antes__titulo1">Sobre o CoronaTeste:</h1>
+    <img src="img/coronavirus.jpg" alt="Foto do virús" class="teste__antes__img"><!--Não entendi a necessidade daquela div aqui-->
+    <h1 class="teste__antes__titulo1">Sobre o CoronaTeste:</h1>
         <p class="teste__antes__texto1">Se você deseja detectar, se você foi infectado pelo covid-19 ou não,
             você está no lugar certo. Basta responder às perguntas e descobrir o resultado.<span class="teste__antes__texto1--alert"> Lembre-se de 
             que fiz isso para a minha pratica com programação e o resultado desse teste não deve ser levado 
@@ -86,50 +78,58 @@
     </div>
 
     <div class="teste__depois"> <!--Esse menu aparece depois do usuario aceitar fazer o teste-->
-        <div class="center">
-            <input type="button" value="Voltar" class="btnVoltar teste__btn btn red">
-        </div>
+            <input type="button" value="Voltar" class="btnVoltar teste__btn btn">
        <h1 class="teste__titulo2">Responda o questionario a seguir</h1>
         <form name="teste__formulario" class="teste__formulario">
             <div class="teste__pergunta">
-                <p>1. Você esta sentindo febre(superior a 37,5 graus)?</p >
-            <input type="radio" name="teste__pergunta1" autocomplete="off" value="Sim" class="btnResposta">Sim
-            <input type="radio" name="teste__pergunta1" autocomplete="off" value="Nao" class="btnResposta">Não
+                <p>1. Você esta sentindo febre(superior a 37,5 graus)?</p>
+            <label for="teste__pergunta1">Sim</label>
+            <input type="radio" name="teste__pergunta1" autocomplete="off" value="Sim" class="btnResposta">
+            <label for="teste__pergunta1">Não</label>
+            <input type="radio" name="teste__pergunta1" autocomplete="off" value="Nao" class="btnResposta">
             </div>
 
             <div class="teste__pergunta">
                 <p>2. Você tem dificuldade para respirar?</p >
-            <input type="radio" name="teste__pergunta2" autocomplete="off" value="Sim" class="btnResposta">Sim
-            <input type="radio" name="teste__pergunta2" autocomplete="off" value="Nao" class="btnResposta">Não
+            <label for="teste__pergunta2">Sim</label>
+            <input type="radio" name="teste__pergunta2" autocomplete="off" value="Sim" class="btnResposta">
+            <label for="teste__pergunta2">Não</label>
+            <input type="radio" name="teste__pergunta2" autocomplete="off" value="Nao" class="btnResposta">
             </div>
 
             <div class="teste__pergunta">
                 <p>3. Você costuma se sentir cansado, mesmo que não faça nada?</p >
-            <input type="radio" name="teste__pergunta3" autocomplete="off" value="Sim" class="btnResposta">Sim
-            <input type="radio" name="teste__pergunta3" autocomplete="off" value="Nao" class="btnResposta">Não
+            <label for="teste__pergunta">Sim</label>
+            <input type="radio" name="teste__pergunta3" autocomplete="off" value="Sim" class="btnResposta">
+            <label for="teste__pergunta3">Não</label>
+            <input type="radio" name="teste__pergunta3" autocomplete="off" value="Nao" class="btnResposta">
             </div>
 
             <div class="teste__pergunta">
                 <p>4. Você está sentindo algumas dores musculares?</p >
-            <input type="radio" name="teste__pergunta4" autocomplete="off" value="Sim" class="btnResposta">Sim
-            <input type="radio" name="teste__pergunta4" autocomplete="off" value="Nao" class="btnResposta">Não
+            <label for="teste__pergunta4">Sim</label>
+            <input type="radio" name="teste__pergunta4" autocomplete="off" value="Sim" class="btnResposta">
+            <label for="teste__pergunta4">Não</label>
+            <input type="radio" name="teste__pergunta4" autocomplete="off" value="Nao" class="btnResposta">
             </div>
 
             <div class="teste__pergunta">
-                <p>5. Você esta tossindo frequentemente?</p >
-            <input type="radio" name="teste__pergunta5" autocomplete="off" value="Sim" class="btnResposta">Sim
-            <input type="radio" name="teste__pergunta5" autocomplete="off" value="Nao" class="btnResposta">Não
+                <p>5. Você esta tossindo frequentemente?</p>
+            <label for="teste__pergunta5">Sim</label>
+            <input type="radio" name="teste__pergunta5" autocomplete="off" value="Sim" class="btnResposta">
+            <label for="teste__pergunta5">Não</label>
+            <input type="radio" name="teste__pergunta5" autocomplete="off" value="Nao" class="btnResposta">
             </div>
 
             <div class="teste__pergunta">
                 <p>6. Você tem dor de garganta?</p >
-            <input type="radio" name="teste__pergunta6" autocomplete="off" value="Sim" class="btnResposta">Sim
-            <input type="radio" name="teste__pergunta6" autocomplete="off" value="Nao" class="btnResposta">Não
+            <label for="teste__pergunta6">Sim</label>
+            <input type="radio" name="teste__pergunta6" autocomplete="off" value="Sim" class="btnResposta">
+            <label for="teste__pergunta6">Não</label>
+            <input type="radio" name="teste__pergunta6" autocomplete="off" value="Nao" class="btnResposta">
             </div>
 
-            <div class="center">
-               <a href="#teste"><input type="button" name="btnEnviar" id="btnEnviar" value="Enviar as respostas" class="teste__btn btn"></a>
-            </div>
+            <a href="#teste"><input type="button" name="btnEnviar" id="btnEnviar" value="Enviar as respostas" class="teste__btn btn"></a>
         </form>
     </div>
 
@@ -160,10 +160,6 @@
         <h3 class="servicos"></h3>
     </div>
     </section>
-
-    <footer class="rodape">
-        a
-    </footer>
 
     <script src="js/script.js"></script>
 </body>
