--- a/index.html
+++ b/index.html
@@ -81,55 +81,55 @@
             <div id="formulario__pergunta1" class="formulario__pergunta">
                 <p class="pergunta__texto">1. Você esta sentindo febre(superior a 37,5 graus)?</p>
                 <p class="pegunta__erro">Marque uma alternativa</p>
-            <label for="formulario__pergunta1">Sim</label>
-            <input type="radio" name="formulario__pergunta1" value="Sim" class="btnResposta" >
-            <label for="formulario__pergunta1">Não</label>
-            <input type="radio" name="formulario__pergunta1" value="Nao" class="btnResposta">
+            <input type="radio" name="formulario__pergunta1" id="pergunta1S" value="Sim" class="btnResposta" >
+            <label for="pergunta1S">Sim</label>
+            <input type="radio" name="formulario__pergunta1" id="pergunta1N" value="Nao" class="btnResposta">
+            <label for="pergunta1N">Não</label>
             </div>
 
             <div id="formulario__pergunta2" class="formulario__pergunta">
                 <p class="pergunta__texto">2. Você tem dificuldade para respirar?</p>
                 <p class="pegunta__erro">Marque uma alternativa</p>
-            <label for="formulario__pergunta2">Sim</label>
-            <input type="radio" name="formulario__pergunta2" value="Sim" class="btnResposta">
-            <label for="formulario__pergunta2">Não</label>
-            <input type="radio" name="formulario__pergunta2" value="Nao" class="btnResposta">
+            <input type="radio" name="formulario__pergunta2" id="pergunta2S" value="Sim" class="btnResposta">
+            <label for="pergunta2S">Sim</label>
+            <input type="radio" name="formulario__pergunta2" id="pergunta2N" value="Nao" class="btnResposta">
+            <label for="pergunta2N">Não</label>
             </div>
 
             <div id="formulario__pergunta3" class="formulario__pergunta">
                 <p class="pergunta__texto">3. Você costuma se sentir cansado, mesmo que não faça nada?</p>
                 <p class="pegunta__erro">Marque uma alternativa</p>
-            <label for="formulario__pergunta3">Sim</label>
-            <input type="radio" name="formulario__pergunta3" value="Sim" class="btnResposta">
-            <label for="formulario__pergunta3">Não</label>
-            <input type="radio" name="formulario__pergunta3" value="Nao" class="btnResposta">
+            <input type="radio" name="formulario__pergunta3" id="pergunta3S" value="Sim" class="btnResposta">
+            <label for="pergunta3S">Sim</label>
+            <input type="radio" name="formulario__pergunta3" id="pergunta3N" value="Nao" class="btnResposta">
+            <label for="pergunta3N">Não</label>
             </div>
 
             <div id="formulario__pergunta4" class="formulario__pergunta">
                 <p class="pergunta__texto">4. Você está sentindo algumas dores musculares?</p>
                 <p class="pegunta__erro">Marque uma alternativa</p>
-            <label for="formulario__pergunta4">Sim</label>
-            <input type="radio" name="formulario__pergunta4" value="Sim" class="btnResposta">
-            <label for="formulario__pergunta4">Não</label>
-            <input type="radio" name="formulario__pergunta4" value="Nao" class="btnResposta">
+            <input type="radio" name="formulario__pergunta4" id="pergunta4S" value="Sim" class="btnResposta">
+            <label for="pergunta4S">Sim</label>
+            <input type="radio" name="formulario__pergunta4" id="pergunta4N" value="Nao" class="btnResposta">
+            <label for="pergunta4N">Não</label>
             </div>
 
             <div id="formulario__pergunta5" class="formulario__pergunta">
                 <p class="pergunta__texto">5. Você esta tossindo frequentemente?</p>
                 <p class="pegunta__erro">Marque uma alternativa</p>
-            <label for="formulario__pergunta5">Sim</label>
-            <input type="radio" name="formulario__pergunta5" value="Sim" class="btnResposta">
-            <label for="formulario__pergunta5">Não</label>
-            <input type="radio" name="formulario__pergunta5" value="Nao" class="btnResposta">
+            <input type="radio" name="formulario__pergunta5" id="pergunta5S" value="Sim" class="btnResposta">
+            <label for="pergunta5S">Sim</label>
+            <input type="radio" name="formulario__pergunta5" id="pergunta5N" value="Nao" class="btnResposta">
+            <label for="pergunta5N">Não</label>
             </div>
 
             <div id="formulario__pergunta6" class="formulario__pergunta">
                 <p class="pergunta__texto">6. Você tem dor de garganta?</p>
                 <p class="pegunta__erro">Marque uma alternativa</p>
-            <label for="formulario__pergunta6">Sim</label>
-            <input type="radio" name="formulario__pergunta6" value="Sim" class="btnResposta">
-            <label for="formulario__pergunta6">Não</label>
-            <input type="radio" name="formulario__pergunta6" value="Nao" class="btnResposta">
+            <input type="radio" name="formulario__pergunta6" id="pergunta6S" value="Sim" class="btnResposta">
+            <label for="pergunta6S">Sim</label>   
+            <input type="radio" name="formulario__pergunta6" id="pergunta6N" value="Nao" class="btnResposta">
+            <label for="pergunta6N">Não</label>
             </div>
             <a href="#teste"><input type="button" id="proximaPergunta" onclick="perguntaSeguinte(1)" class="teste__btn"></input></a>
         </form>
