--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
         <h1 class="resultado__titulo cabecalho">Resultado do teste: </h1>
         <p id="res1"></p>
         <p id="res2"></p>
-        <p>Se precisar tirar qualquer dúvida, ligue para o Disque Saúde, pelo número 136 
-        – profissionais fazem o atendimento, dando orientações sem que o paciente precise se deslocar.</p><hr>
+        <p>Se precisar tirar qualquer dúvida, ligue para o Disque Saúde, pelo número 136.</p><hr>
         <img src="assets/img/stayhome.png" alt="Fique em casa" class="resultado__img">
     </div>
 
